Fixed horizontal scrolling issue on mobile, shortened LinkedIn URL, removed logos from companies/institutions

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html, body {
+  overflow-x: hidden; /*to prevent horizontal scrolling on mobile*/
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,6 +11,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   /* background-color: black; */
   background-color: #fafafa;
+  /* position: relative; */
 }
 
 code {
